--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
       <ul>
           <li>Prototype</li>
           <li><a href="singleton.html">Singleton</a></li>
-          <li>Flyweight</li>
+          <li><a href="flyweight.html">Flyweight</a></li>
           <li>Command</li>
           <li>Observer</li>
           <li><a href="state.html">State</a></li>
