--- a/html/component.html
+++ b/html/component.html
@@ -123,7 +123,7 @@ another is just begging for those kinds of bugs to happen.</p>
 </aside>
 
 <p>These two problems compound each other: the class touches so many
-domains that every programmer will have to work on it, but its so huge
+domains that every programmer will have to work on it, but it&#x2019;s so huge
 that doing so is a nightmare. If it gets bad enough, coders will start
 putting hacks in other parts of the codebase just to stay out of the
 hairball that this <code>Bjorn</code> class has become.</p>
